--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
+    "angularx-qrcode": "^14.0.0",
     "ionic-header-parallax": "^3.1.0",
+    "jsqr": "^1.4.0",
     "rxjs": "~6.6.0",
     "swiper": "^8.3.2",
     "tslib": "^2.2.0",
